src/test/ui/parser/mismatched-delim-brace-empty-block.stderr
error: unexpected close delimiter: `}`
  --> $DIR/mismatched-delim-brace-empty-block.rs:3:1
   |
LL | fn main() {}
   |           -- this block is empty, you might have not meant to close it
LL |     let _ = ();
LL | }
   | ^ unexpected close delimiter

error: aborting due to previous error

